# alfred-core

./: .lints  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.toml  cron.toml  repositories.toml  routing.toml
.github/workflows/: cd.yml  ci.yml
.github/workflows/scripts/: build_release.sh  build_release_x86_64.sh
docs/: details.md  dev_installation.md  new_module.md
scripts/: install-alfred.sh
src/: config.rs  config_message.rs  connection.rs  error.rs  lib.rs  main.rs  message.rs  module.rs  router_config.rs  zmq_connection.rs
src/connections/: connection.rs  mod.rs  pubsub_connection.rs
src/modules/: callback_module.rs  interface_module.rs  mod.rs  module.rs  service_module.rs
