[package]
name = "alfred-rs"
version = "0.3.0"
edition = "2021"
authors = ["Paolo Panarese <panarese.paolo@gmail.com>"]
description = "Alfred Rust Library"
license = "AGPL-3"
repository = "https://github.com/PaoloPana/alfred-rs"
readme = "./README.md"
keywords = ["framework", "multi-modal", "ai", "personal-assistant"]
categories = ["development-tools", "command-line-utilities", "network-programming"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1.41", features = ["time", "rt", "rt-multi-thread", "macros"] }
zeromq = "0.4"
bytes = "1.8"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
envconfig = "0.11"
itertools = "0.13"
log = "0.4"
zmq2 = { version = "0.5", optional = true }
env_logger = { version = "0.11", optional = true }
cron = { version = "0.13.0", optional = true }
chrono = { version = "0.4.38", optional = true}

[features]
daemon = ["dep:zmq2", "dep:env_logger"]
routing = ["dep:env_logger"]
runner = ["dep:env_logger"]
cron = ["dep:env_logger", "dep:cron", "dep:chrono"]
logs = ["dep:env_logger"]

[lib]
name = "alfred_rs"
path = "src/lib.rs"
bench = true
required-features = ["default"]

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"
required-features = ["daemon"]

[[bin]]
name = "routing"
path = "src/bin/routing.rs"
required-features = ["routing"]

[[bin]]
name = "runner"
path = "src/bin/runner.rs"
required-features = ["runner"]

[[bin]]
name = "cron"
path = "src/bin/cron.rs"
required-features = ["cron"]

[[bin]]
name = "logs"
path = "src/bin/logs.rs"
required-features = ["logs"]
