[package]
name = "alfred-rs"
version = "0.3.0"
edition = "2021"
authors = ["Paolo Panarese <panarese.paolo@gmail.com>"]
description = "Alfred Rust Library"
license = "AGPL-3"
repository = "https://github.com/PaoloPana/alfred-rs"
readme = "./README.md"
keywords = ["framework", "multi-modal", "ai", "personal-assistant"]
categories = ["development-tools", "command-line-utilities", "network-programming"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1.42", features = ["time", "rt", "rt-multi-thread", "macros"] }
zeromq = "0.4"
bytes = "1.9"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
envconfig = "0.11"
itertools = "0.13"
log = "0.4"
clap = "4.5"
zmq2 = { version = "0.5", optional = true }
env_logger = { version = "0.11", optional = true }
cron = { version = "0.13", optional = true }
chrono = { version = "0.4", optional = true }

[features]
zmq2 = ["dep:zmq2"]
logger = ["dep:env_logger"]
cron = ["dep:cron", "dep:chrono"]

[lib]
name = "alfred_rs"
path = "src/lib.rs"
bench = true
required-features = ["default"]

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"
required-features = ["zmq2", "logger"]

[[bin]]
name = "routing"
path = "src/bin/routing.rs"
required-features = ["logger"]

[[bin]]
name = "runner"
path = "src/bin/runner.rs"
required-features = ["logger"]

[[bin]]
name = "cron"
path = "src/bin/cron.rs"
required-features = ["logger", "cron"]

[[bin]]
name = "logs"
path = "src/bin/logs.rs"
required-features = ["logger"]
