[package]
name = "alfred-core"
version = "0.1.2"
edition = "2021"
authors = ["Paolo Panarese <panarese.paolo@gmail.com>"]
description = "Alfred Rust Library"
license = "MIT"
repository = "https://github.com/PaoloPana/alfred-rs"
readme = "./README.md"
keywords = ["framework", "multi-modal", "ai", "personal-assistant"]
categories = ["development-tools", "command-line-utilities", "network-programming"]

[dependencies]
thiserror = "2.0"
tokio = { version = "1.42", features = ["time", "rt", "rt-multi-thread", "macros"] }
zeromq = "0.4"
bytes = "1.9"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
envconfig = "0.11"
itertools = "0.13"
log = "0.4"
clap = "4.5"
zmq2 = { version = "0.5", optional = true }
env_logger = { version = "0.11", optional = true }
cron = { version = "0.13", optional = true }
chrono = { version = "0.4", optional = true }
reqwest = { version = "0.12", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }

[features]
zmq2 = ["dep:zmq2"]
logger = ["dep:env_logger"]
cron = ["dep:cron", "dep:chrono"]
reqwest = ["dep:reqwest"]
tar_gz = ["dep:flate2", "dep:tar"]

[lib]
name = "alfred_core"
path = "src/lib.rs"
bench = true
required-features = ["default"]

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"
required-features = ["zmq2", "logger"]

[[bin]]
name = "routing"
path = "src/bin/routing.rs"
required-features = ["logger"]

[[bin]]
name = "runner"
path = "src/bin/runner.rs"
required-features = ["logger"]

[[bin]]
name = "cron"
path = "src/bin/cron.rs"
required-features = ["logger", "cron"]

[[bin]]
name = "logs"
path = "src/bin/logs.rs"
required-features = ["logger"]

[[bin]]
name = "downloader"
path = "src/bin/downloader.rs"
required-features = ["logger", "reqwest", "tar_gz"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
dbg_macro = "deny"
decimal_literal_representation = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
print_stdout = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
unimplemented = "deny"
unneeded_field_pattern = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
unwrap_used = "deny"
or_fun_call = "deny"
expect_fun_call = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
missing_errors_doc = "allow"
